--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		</div>
 		<h2>Страницы:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="http://devarea.space/Technicopol/home.html">Home</a></li>
-			<li><a target="_blank" href="http://devarea.space/Technicopol/page-two.html">Page-two</a></li>
+			<li><a target="_blank" href="home.html">Home</a></li>
+			<li><a target="_blank" href="page-two.html">Page-two</a></li>
 		</ol>
 		<!-- <h2>Страницы в разработке:</h2>
 		<ol class="rootpage__list">
